test/libsolidity/syntaxTests/nameAndTypeResolution/338_rational_bitnot_unary_operation.sol
contract test {
    function f() public {
        ~fixed(3.5);
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
